--- a/src/main/resources/templates/patient_additions/anamnesis.html
+++ b/src/main/resources/templates/patient_additions/anamnesis.html
@@ -18,6 +18,16 @@
         <!---->
         <div class="container text-secondary my-5">
             <!---->
+            <div class="row fs-5 mb-5">
+                <h1 class="text-center fs-3">
+                    <span th:if="${isSelf}">Ваш анамнез</span>
+                    <span th:if="${!isSelf}">
+                        Анамнез пациента
+                        <span th:text="${patient.userInformation.fullName}" class="fw-bold">Иванов Сергей Петрович</span>
+                    </span>
+                </h1>
+            </div>
+            <!---->
             <div class="row" th:if="${anamnesis != null}">
                 <div class="col-12 fs-5">
                     <div class="mb-5">
