--- a/src/main/resources/templates/indicators/forms/pressure-form.html
+++ b/src/main/resources/templates/indicators/forms/pressure-form.html
@@ -24,7 +24,7 @@
             <!---->
             <div class="row">
                 <div class="col-12">
-                    <form action="#" method="post" id="anamnesis-form" class="fs-5">
+                    <form action="#" method="post" id="pressure-form" class="fs-5">
                         <div class="mb-5 col-12 col-md-6 col-lg-4">
                             <label for="upper" class="form-label fw-semibold fs-4">Верхнее (мм рт.ст.)</label>
                             <input type="number" name="upper" id="upper" class="form-control" placeholder="177" />
@@ -51,8 +51,8 @@
         <div th:replace="~{/fragments/modal/success-modal :: success-modal}"></div>
         <div th:replace="~{/fragments/footers/footer :: footer}"></div>
         <!---->
-        <script src="../../static/js/patient_additions/anamnesis-form.js" th:src="@{/js/patient_additions/anamnesis-form.js}"></script>
-        <script src="../../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
+        <script src="../../../static/js/indicators/forms/pressure-form.js" th:src="@{/js/indicators/forms/pressure-form.js}"></script>
+        <script src="../../../static/js/bootstrap/bootstrap.bundle.min.js" th:src="@{/js/bootstrap/bootstrap.bundle.min.js}"></script>
         <!---->
     </body>
 </html>
