--- a/src/main/resources/templates/indicators/tables/pressure-table.html
+++ b/src/main/resources/templates/indicators/tables/pressure-table.html
@@ -20,7 +20,11 @@
         <div class="container text-secondary my-5">
             <!---->
             <div class="row fs-5 mb-5">
-                <h1 class="text-center fs-3">Давление</h1>
+                <h1 th:if="${isSelf}" class="text-center fs-3 mb-0">Ваше давление</h1>
+                <h1 th:if="${!isSelf}" class="text-center fs-3 mb-0">
+                    Давление пациента
+                    <span th:text="${patient.userInformation.fullName}" class="fw-bold">Петров Сергей Иванович</span>
+                </h1>
             </div>
             <!---->
             <div class="row">
