--- a/src/main/resources/templates/indicators/tables/pressure-table.html
+++ b/src/main/resources/templates/indicators/tables/pressure-table.html
@@ -29,7 +29,7 @@
             <!---->
             <div class="row">
                 <div class="col-12">
-                    <div id="table" th:attr="data-patient=${currentUser.id}"></div>
+                    <div id="table" th:attr="data-patient=${patient.id}"></div>
                 </div>
             </div>
             <!---->
