--- a/src/main/resources/templates/indicators/forms/pressure-form.html
+++ b/src/main/resources/templates/indicators/forms/pressure-form.html
@@ -5,11 +5,11 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Давление</title>
-        <link href="../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
-        <link href="../../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
-        <link rel="apple-touch-icon" sizes="180x180" href="../../static/favicon/apple-touch-icon.png" th:href="@{/favicon/apple-touch-icon.png}" />
-        <link rel="icon" type="image/png" sizes="32x32" href="../../static/favicon/favicon-32x32.png" th:href="@{/favicon/favicon-32x32.png}" />
-        <link rel="icon" type="image/png" sizes="16x16" href="../../static/favicon/favicon-16x16.png" th:href="@{/favicon/favicon-16x16.png}" />
+        <link href="../../../static/css/bootstrap.min.css" th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
+        <link href="../../../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet" />
+        <link rel="apple-touch-icon" sizes="180x180" href="../../../static/favicon/apple-touch-icon.png" th:href="@{/favicon/apple-touch-icon.png}" />
+        <link rel="icon" type="image/png" sizes="32x32" href="../../../static/favicon/favicon-32x32.png" th:href="@{/favicon/favicon-32x32.png}" />
+        <link rel="icon" type="image/png" sizes="16x16" href="../../../static/favicon/favicon-16x16.png" th:href="@{/favicon/favicon-16x16.png}" />
     </head>
 
     <body class="min-vh-100 d-flex flex-column align-items-center justify-content-between bg-main">
@@ -19,7 +19,7 @@
         <div class="container text-secondary my-5">
             <!---->
             <div class="row fs-5 mb-5">
-                <h1 class="text-center fs-3">Давление</h1>
+                <h1 class="text-center fs-3 mb-0">Давление</h1>
             </div>
             <!---->
             <div class="row">
@@ -34,7 +34,7 @@
                             <input type="number" name="lower" id="lower" class="form-control" placeholder="64.9" />
                         </div>
                         <div class="mb-5">
-                            <h4 class="fs-4">После нагрузки?</h4>
+                            <h4 class="fs-4">После нагрузки</h4>
                             <div class="form-check form-check-inline" th:each="each : ${trueFalse}">
                                 <label class="form-check-label" th:for="'afterExercise' + ${each}" th:text="${each.yesNo}">Да</label>
                                 <input th:id="'afterExercise' + ${each}" type="radio" class="form-check-input" th:value="${each.value}" name="afterExercise" />
